objects/Shipment__c.object
<CustomObject>
    <description>Used to track shipments of assets outbound. Will update OR create assets and update the needed information for them when a shipment is made</description>
    <fields>
        <fullName>AccountOwnerEmail__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>After saving, the shipment email will be send to the Account owner as well as this email field.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsVirtualShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVirtualShipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderNumber__c</fullName>
        <inlineHelpText>Free form input for purchase order numbers not linked to an opportunity</inlineHelpText>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to Purchase Orders recorded against Opportunities</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SendTrackingInformation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, an email will be sent out after saving.</inlineHelpText>
        <label>Send Tracking Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is set when the vx and vrx shipment emails are to be sent after one hr</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set all assets to this contact</inlineHelpText>
        <label>Shipment Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>set all shipment line assets to this contract</inlineHelpText>
        <label>Shipment Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Email__c</fullName>
        <label>Third Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>To_Be_Swapped_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Be Swapped Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_Information__c</fullName>
        <label>Tracking Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHIP-{000}</displayFormat>
        <label>ShipmentId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>